# Psroot

./: .gitignore  Cargo.toml  README.md  launch-psroot-pwsh-elevated.ps1  launch-psroot-shells.ps1  run-winget-test.ps1  setup-elevated.ps1
crates/psroot-bindlink/: Cargo.toml
crates/psroot-bindlink/src/: lib.rs
crates/psroot-cli/: Cargo.toml
crates/psroot-cli/src/: mac_lima.rs  main.rs  main_unix.rs  main_windows.rs
crates/psroot-container/: Cargo.toml
crates/psroot-container/examples/: chrome-sandboxed.rs
crates/psroot-container/src/: app_stage.rs  container.rs  detect.rs  lib.rs  netstack_runtime.rs  peb_patch.rs  procshim_runtime.rs  rootfs.rs  sandbox.rs  setup.rs
crates/psroot-desktop/: Cargo.toml
crates/psroot-desktop/examples/: chrome-isolated.rs
crates/psroot-desktop/src/: desktop.rs  lib.rs
crates/psroot-job/: Cargo.toml
crates/psroot-job/src/: accounting.rs  handle.rs  lib.rs  limits.rs
crates/psroot-namespace/: Cargo.toml
crates/psroot-namespace/src/: lib.rs  ntapi.rs
crates/psroot-netinject/: Cargo.toml
crates/psroot-netinject/src/: lib.rs
crates/psroot-netshim/: Cargo.toml
crates/psroot-netshim/src/: client.rs  dllmain.rs  hooks.rs  iat.rs  install.rs  lib.rs  state.rs
crates/psroot-netshim/tests/: e2e_hooks.rs  e2e_inject.rs  e2e_nat.rs  e2e_udp.rs
crates/psroot-netstack-host/: Cargo.toml
crates/psroot-netstack-host/src/: backend.rs  daemon.rs  lib.rs  nat.rs  socket_table.rs
crates/psroot-netstack-ipc/: Cargo.toml
crates/psroot-netstack-ipc/src/: channel.rs  lib.rs  ring.rs  shm.rs  signal.rs
crates/psroot-netstack-proto/: Cargo.toml
crates/psroot-netstack-proto/src/: lib.rs
crates/psroot-portmap/: Cargo.toml
crates/psroot-portmap/src/: lib.rs
crates/psroot-procshim/: Cargo.toml
crates/psroot-procshim/src/: dllmain.rs  hooks.rs  iat.rs  install.rs  lib.rs  state.rs
crates/psroot-rootfs-stager/: Cargo.toml
crates/psroot-rootfs-stager/src/: lib.rs
crates/psroot-shell-resolver/: Cargo.toml
crates/psroot-shell-resolver/catalog/: chrome.toml  cmd.toml  msedge.toml  powershell.toml  pwsh.toml
crates/psroot-shell-resolver/catalog/modules/PsrootNet/: PsrootNet.psd1  PsrootNet.psm1
crates/psroot-shell-resolver/examples/: parse_check.rs
crates/psroot-shell-resolver/src/: error.rs  lib.rs  plan.rs  probe.rs  resolve.rs  version.rs
crates/psroot-shell-resolver/src/catalog/: mod.rs  schema.rs
crates/psroot-shell-resolver/tests/: resolve.rs
crates/psroot-silo/: Cargo.toml
crates/psroot-silo/src/: lib.rs  process.rs
crates/psroot-types/: Cargo.toml
crates/psroot-types/src/: config.rs  error.rs  lib.rs  state.rs  stats.rs
crates/psroot-unix/: Cargo.toml
crates/psroot-unix/src/: backend_linux.rs  backend_macos.rs  lib.rs  parse.rs  paths.rs  ports.rs  pty.rs  rootfs.rs  sandbox.rs  state.rs
crates/psroot-unix/src/net/: bridge.rs  ipam.rs  mod.rs  nat.rs  veth.rs
docs/: cli-reference.md  container-lifecycle.md  desktop-isolation.md  installation.md  interactive-shells.md  isolation.md  netstack.md  network-and-tools.md  platform-networking.md  quick-start.md  resource-limits.md  sandbox-networking.md
scripts/: capture-linux-proof.sh  capture-proof.sh  proof-expect.exp
tests/: launch-psroot-pwsh-elevated.ps1  setup-elevated.ps1  test-procshim.ps1  test-pwsh-devicemap.ps1  test-silo-elevated.ps1  test-winget.ps1
tools/mac/: lima.psroot.yaml  mac_end_to_end.sh  psroot-mac
tools/proofs/: linux_end_to_end.sh
