[workspace]
resolver = "2"
members = [
    "crates/psroot-types",
    "crates/psroot-job",
    "crates/psroot-bindlink",
    "crates/psroot-namespace",
    "crates/psroot-silo",
    "crates/psroot-portmap",
    "crates/psroot-netstack-proto",
    "crates/psroot-netstack-ipc",
    "crates/psroot-netstack-host",
    "crates/psroot-netshim",
    "crates/psroot-netinject",
    "crates/psroot-container",
    "crates/psroot-desktop",
    "crates/psroot-cli",
    "crates/psroot-shell-resolver",
    "crates/psroot-rootfs-stager",
    "crates/psroot-unix",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/psmux/Psroot"

[workspace.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
]}
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
