[package]
name = "psroot-bindlink"
version.workspace = true
edition.workspace = true
description = "Bind Filter wrapper — transparent filesystem redirection (bind mount equivalent)"

[dependencies]
psroot-types = { path = "../psroot-types" }
tracing = { workspace = true }
windows-sys = { workspace = true }
