[package]
name = "psroot-job"
version.workspace = true
edition.workspace = true
description = "Job Object wrapper — process containment + resource limits (cgroups equivalent)"

[dependencies]
psroot-types = { path = "../psroot-types" }
windows-sys = { workspace = true }
tracing = { workspace = true }
