[package]
name = "psroot-netinject"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Classic CreateRemoteThread + LoadLibraryW DLL injector for the psroot netshim."

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
] }
tracing.workspace = true
