[package]
name = "psroot-procshim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Container-side shim: hides host processes from sandboxed programs by hooking NtQuerySystemInformation"

[lib]
# Dual output: rlib for unit tests; cdylib for injection via
# psroot-netinject (CreateRemoteThread + LoadLibraryW).
crate-type = ["rlib", "cdylib"]

[dependencies]
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_Security",
] }
once_cell = "1"
parking_lot = "0.12"
