[package]
name = "psroot-procshim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Container-side shim: hides host processes from sandboxed programs by hooking NtQuerySystemInformation"

[lib]
# Dual output: rlib for unit tests; cdylib for injection via
# psroot-netinject (CreateRemoteThread + LoadLibraryW).
crate-type = ["rlib", "cdylib"]

# Test child binary: exercises all process enumeration methods inside
# a sandbox to prove the procshim isolation is complete.
[[bin]]
name = "procshim-testchild"
path = "bin/procshim_testchild.rs"

# E2E integration test: spawns testchild suspended, injects DLL, proves isolation.
[[bin]]
name = "procshim-e2e-test"
path = "bin/procshim_e2e_test.rs"

# Utility to inspect ntdll function prologues
[[bin]]
name = "inspect-ntdll"
path = "bin/inspect_ntdll.rs"

[dependencies]
tracing.workspace = true
psroot-netinject = { path = "../psroot-netinject" }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_Security",
] }
once_cell = "1"
parking_lot = "0.12"
