[package]
name = "psroot-rootfs-stager"
version.workspace = true
edition.workspace = true
description = "Applies a LaunchPlan to disk: hardlink/copy/junction + ACE grants + manifest."

[dependencies]
psroot-shell-resolver = { path = "../psroot-shell-resolver" }
psroot-types = { path = "../psroot-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
tempfile = "3"
