[package]
name = "psroot-shell-resolver"
version.workspace = true
edition.workspace = true
description = "Resolves a host shell + version into a concrete LaunchPlan for psroot AppContainers."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
tempfile = "3"
