[package]
name = "psroot-silo"
version.workspace = true
edition.workspace = true
description = "Server Silo wrapper — full namespace isolation (chroot + registry + objects)"

[dependencies]
psroot-types = { path = "../psroot-types" }
psroot-job = { path = "../psroot-job" }
psroot-namespace = { path = "../psroot-namespace" }
windows-sys = { workspace = true }
tracing = { workspace = true }
