[package]
name = "psroot-unix"
version.workspace = true
edition.workspace = true
description = "Psroot container backend for Linux and macOS"

[dependencies]
psroot-types = { path = "../psroot-types" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
nix = { version = "0.29", features = ["fs", "process", "signal", "term", "user", "mount", "sched", "resource", "ioctl", "pthread", "socket", "poll", "hostname"] }
libc = "0.2"
dirs = "5"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"
